# surrealdb-client

./: Cargo.toml  README.md  docker-compose.yaml
examples/: account_creation.rs
src/: lib.rs
