[package]
name = "surrealdb_client"
version = "2.0.0"
edition = "2021"
description = "A Rust client for SurrealDB"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Protoculos/surrealdb-client"
documentation = "https://docs.rs/surrealdb_client"
readme = "README.md"
keywords = ["database", "client", "surrealdb"]
categories = ["database"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
base64 = "0.13"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
serde_json = "1.0.120"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }

[[example]]
name = "account_creation"
path = "examples/account_creation.rs"

[lib]
name = "surrealdb_client"
path = "src/lib.rs"